--- a/index.html
+++ b/index.html
@@ -11,6 +11,50 @@
 </head>
 
 <body>
+    <header class="container">
+        <!-- navbar start  -->
+        <nav class="navbar navbar-expand-lg bg-light mt-4">
+            <div class="container-fluid">
+                <a class="navbar-brand " href="#"></a>
+                <h1>Learning</h1>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-5">
+                        <li class="nav-item">
+                            <a class="nav-link active fs-5" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-5" href="#">Courses </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-5" href="#">Deals </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-5" href="#">Success </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-5" href="#">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-5" href="#">Register </a>
+                        </li>
+
+
+                    </ul>
+                    <form class="d-flex" role="search">
+
+                        <button class="btn btn-lg btn-outline-primary" type="submit">Register</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!------- navbar end ------- -->
+
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
