--- a/index.html
+++ b/index.html
@@ -53,7 +53,43 @@
             </div>
         </nav>
         <!------- navbar end ------- -->
-
+        <!------- slider start ------- -->
+        <section class="mt-4">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner position-relative">
+                    <div class="carousel-item rounded active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item rounded">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item rounded">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <div
+                    class="carousel-caption position-absolute start-0 top-50 translate-middle-y bg-dark bg-opacity-50 w-100 h-100 d-flex justify-content-center align-items-center">
+                    <div>
+                        <h1 class="display-3 fw-bold">Get Started Digital<br> Learning</h1>
+                        <p class="fs-5 fw-light">It is a long established fact that a reader will be distracted by the
+                            readable <br>
+                            content of a page when looking at its layout.</p>
+                        <a href="" class="btn btn-lg btn-primary">Get Started</a>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!------- slider end ------- -->
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
