--- a/index.html
+++ b/index.html
@@ -91,6 +91,138 @@
         </section>
         <!------- slider end ------- -->
     </header>
+    <main>
+        <!------- courses section start----- -->
+        <section class="container">
+
+            <div class="text-center mb-5 mt-5">
+                <h1 class="fw-bold">Discover Our Popular <br> Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row g-0">
+                            <div class="col-md-4 ">
+                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text my-2">This is a wider card with supporting text below as a
+                                        natural
+                                        lead-in to
+                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center justify-content-center mt-5">
+                    <a href="" class="btn btn-lg btn-primary">View All</a>
+                </div>
+            </div>
+            <!-------- courses section end ----- -->
+        </section>
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
