join section add

--- a/index.html
+++ b/index.html
@@ -219,7 +219,25 @@
                     <a href="" class="btn btn-lg btn-primary">View All</a>
                 </div>
             </div>
-            <!-------- courses section end ----- -->
+        </section>
+        <!-------- courses section end ----- -->
+        <!------------- join section start ------ -->
+        <section class="container">
+            <div
+                class="mt-5 d-flex justify-content-between bg-primary flex-column flex-lg-row text-center text-lg-start justify-content-center rounded  py-5 px-xxl-5">
+                <div>
+                    <h1>Ready to join?</h1>
+                    <p class="px-3 px-md-0">
+                        Looking for a simple way to interact with the courses? Join us for the <br
+                            class="d-none d-md-block">
+                        free classes. Register now for become a student today.
+                    </p>
+                </div>
+                <div>
+                    <a href="" class="btn btn-lg bg-white text-primary fw-bold" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Register Now</a>
+                </div>
+            </div>
         </section>
 
     </main>
