--- a/index.html
+++ b/index.html
@@ -280,7 +280,92 @@
             </div>
         </section>
         <!-- ----join section end ---- -->
-
+        <!-- accordian section start  -->
+        <section class="container">
+            <div class="mt-5 text-center">
+                <h1 class="fw-bold">Frequently Asked Questions</h1>
+                <p> Most asked and valuable questions by students are listed down below, most<br>
+                    of the questions are on the topic of Html, Css and frameworks.</p>
+            </div>
+            <div class="justify-content-center row">
+                <div class="col-lg-10 col-xl-8">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What are the difference between flexbox and grid?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Grid is made for two-dimensional layout while Flexbox is for one. This means
+                                    Flexbox can work on
+                                    either row or columns at a time, but Grids can work on both.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What are the difference between bootstrap and tailwind?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Bootstrap comes with a set of pre-styled responsive, mobile-first components
+                                    that possess a definite
+                                    UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                                    flexibility and
+                                    uniqueness.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is css box model?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    CSS box model refers to how HTML elements are modeled in browser engines and
+                                    how the dimensions of
+                                    those HTML elements are derived from CSS properties.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is a semantic tag in html5?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Semantic HTML elements are those that clearly describe their meaning in a
+                                    human- and
+                                    machine-readable way. Elements such as
+                                    <code> &#60;header&#62;, &#60;footer&#62; and &#60;article&#62; </code> are
+                                    all considered
+                                    semantic because they accurately describe the purpose of the element and the
+                                    type of content that
+                                    is inside them.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- accordian section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
