--- a/index.html
+++ b/index.html
@@ -366,6 +366,21 @@
             </div>
         </section>
         <!-- accordian section end  -->
+        <!--------- company section start ---- -->
+        <section class="container py-5 my-5">
+            <div>
+                <h1 class="text-center fw-bold mb-4">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="justify-content-center d-flex align-items-center gap-5">
+                <img src="images/company/company-1.png" alt="">
+                <img src="images/company/company-2.png" alt="">
+                <img src="images/company/company-3.png" alt="">
+                <img src="images/company/company-4.png" alt="">
+                <img src="images/company/company-5.png" alt="">
+                <img src="images/company/company-6.png" alt="">
+            </div>
+        </section>
+        <!--------- company section end ---- -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
