--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning</title>
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/e5ddca0a55.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -382,6 +385,37 @@
         </section>
         <!--------- company section end ---- -->
     </main>
+    <!-- footer start  -->
+    <footer class="bg-dark text-white py-5">
+        <div class="d-flex flex-column align-items-center py-lg-5 my-lg-5">
+            <h1>Learning</h1>
+            <span>Office 41, Joydeppur Chowrasta, Gazipur, </span>
+            <span>Gazipur Bangladesh</span>
+            <span>Privacy Policy | Terms of use</span>
+            <ul class="list-unstyled d-flex gap-3 mt-3">
+                <li>
+                    <a href=""
+                        class="align-items-center justify-content-center d-flex text-decoration-none fs-5 bg-white bg-opacity-10 text-white rounded-circle"><i
+                            class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://web.facebook.com/rjsakib.sakib.1/"
+                        class="align-items-center justify-content-center d-flex text-decoration-none fs-5 bg-white bg-opacity-10 text-white rounded-circle"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href=""
+                        class="align-items-center justify-content-center d-flex text-decoration-none fs-5 bg-white bg-opacity-10 text-white rounded-circle"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://github.com/sakibnazmus1"
+                        class="align-items-center justify-content-center d-flex text-decoration-none fs-5 bg-white bg-opacity-10 text-white rounded-circle"><i
+                            class="fa-brands fa-github"></i></a>
+                </li>
+            </ul>
+    </footer>
+    <!-- footer end  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
