short changes for course section

--- a/index.html
+++ b/index.html
@@ -113,10 +113,8 @@
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
                                     <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <p class="card-text my-2">UX design is one of the top five in-demand skills
+                                        according to a LinkedIn report.</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
@@ -127,15 +125,13 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                                <img src="images/course/course-2.png" class="w-100 h-100 d-block" alt="...">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text my-2">A perfect JavaScript course for all those who want to
+                                        master JavaScript right from scratch.</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
@@ -146,15 +142,13 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                                <img src="images/course/course-3.png" class="w-100 h-100 d-block" alt="...">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text my-2">Full stack development is the most popular career
+                                        in the software development field.</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
@@ -165,15 +159,13 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                                <img src="images/course/course-4.png" class="w-100 h-100 d-block" alt="...">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Digital Marketing</h5>
+                                    <p class="card-text my-2">Marketing is a good major, it's extremely versatile and
+                                        may lead to a variety of high paying careers</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
@@ -184,15 +176,13 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                                <img src="images/course/course-5.png" class="w-100 h-100 d-block" alt="...">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Photography Basic Rules</h5>
+                                    <p class="card-text my-2">Photography is definitely a good career, and in my
+                                        opinion, it is one of the best ones!</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
@@ -203,15 +193,13 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="w-100 h-100 d-block" alt="...">
+                                <img src="images/course/course-6.png" class="w-100 h-100 d-block" alt="...">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text my-2">This is a wider card with supporting text below as a
-                                        natural
-                                        lead-in to
-                                        additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Motion Graphics</h5>
+                                    <p class="card-text my-2">Across the creative industries, motion design is one of
+                                        the most in-demand skills right now.</p>
                                     <h5 class="card-text text-primary fw-bold">Price : 20$</h5>
                                 </div>
                             </div>
